--- a/notebooks/telegram.ipynb
+++ b/notebooks/telegram.ipynb
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2183,39 +2183,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22 March</th>\n",
-       "      <td>69</td>\n",
-       "      <td>-9%</td>\n",
+       "      <th>19 April</th>\n",
+       "      <td>1580</td>\n",
+       "      <td>15%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23 March</th>\n",
-       "      <td>102</td>\n",
-       "      <td>47%</td>\n",
+       "      <th>20 April</th>\n",
+       "      <td>1239</td>\n",
+       "      <td>-21%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24 March</th>\n",
-       "      <td>66</td>\n",
-       "      <td>-35%</td>\n",
+       "      <th>21 April</th>\n",
+       "      <td>1537</td>\n",
+       "      <td>24%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25 March</th>\n",
-       "      <td>86</td>\n",
+       "      <th>22 April</th>\n",
+       "      <td>1292</td>\n",
+       "      <td>-15%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23 April</th>\n",
+       "      <td>1667</td>\n",
+       "      <td>29%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24 April</th>\n",
+       "      <td>1408</td>\n",
+       "      <td>-15%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25 April</th>\n",
+       "      <td>1835</td>\n",
        "      <td>30%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26 March</th>\n",
-       "      <td>78</td>\n",
-       "      <td>-9%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27 March</th>\n",
-       "      <td>151</td>\n",
-       "      <td>93%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28 March</th>\n",
-       "      <td>143</td>\n",
-       "      <td>-5%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2224,16 +2224,16 @@
       "text/plain": [
        "           NewCases %Change\n",
        "date                       \n",
-       "22 March         69     -9%\n",
-       "23 March        102     47%\n",
-       "24 March         66    -35%\n",
-       "25 March         86     30%\n",
-       "26 March         78     -9%\n",
-       "27 March        151     93%\n",
-       "28 March        143     -5%"
+       "19 April       1580     15%\n",
+       "20 April       1239    -21%\n",
+       "21 April       1537     24%\n",
+       "22 April       1292    -15%\n",
+       "23 April       1667     29%\n",
+       "24 April       1408    -15%\n",
+       "25 April       1835     30%"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2293,39 +2293,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22 March</th>\n",
-       "      <td>403</td>\n",
-       "      <td>20%</td>\n",
+       "      <th>19 April</th>\n",
+       "      <td>17304</td>\n",
+       "      <td>10%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23 March</th>\n",
-       "      <td>505</td>\n",
-       "      <td>25%</td>\n",
+       "      <th>20 April</th>\n",
+       "      <td>18543</td>\n",
+       "      <td>7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24 March</th>\n",
-       "      <td>571</td>\n",
-       "      <td>13%</td>\n",
+       "      <th>21 April</th>\n",
+       "      <td>20080</td>\n",
+       "      <td>8%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25 March</th>\n",
-       "      <td>657</td>\n",
-       "      <td>15%</td>\n",
+       "      <th>22 April</th>\n",
+       "      <td>21372</td>\n",
+       "      <td>6%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26 March</th>\n",
-       "      <td>735</td>\n",
-       "      <td>11%</td>\n",
+       "      <th>23 April</th>\n",
+       "      <td>23039</td>\n",
+       "      <td>7%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27 March</th>\n",
-       "      <td>886</td>\n",
-       "      <td>20%</td>\n",
+       "      <th>24 April</th>\n",
+       "      <td>24447</td>\n",
+       "      <td>6%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28 March</th>\n",
-       "      <td>1029</td>\n",
-       "      <td>16%</td>\n",
+       "      <th>25 April</th>\n",
+       "      <td>26282</td>\n",
+       "      <td>7%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2334,16 +2334,16 @@
       "text/plain": [
        "           TotalCases %Increase\n",
        "date                           \n",
-       "22 March          403       20%\n",
-       "23 March          505       25%\n",
-       "24 March          571       13%\n",
-       "25 March          657       15%\n",
-       "26 March          735       11%\n",
-       "27 March          886       20%\n",
-       "28 March         1029       16%"
+       "19 April        17304       10%\n",
+       "20 April        18543        7%\n",
+       "21 April        20080        8%\n",
+       "22 April        21372        6%\n",
+       "23 April        23039        7%\n",
+       "24 April        24447        6%\n",
+       "25 April        26282        7%"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,6 +2529,240 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>New</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>1835</td>\n",
+       "      <td>26283</td>\n",
+       "      <td>825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mahara</th>\n",
+       "      <td>811</td>\n",
+       "      <td>7628</td>\n",
+       "      <td>323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gujara</th>\n",
+       "      <td>256</td>\n",
+       "      <td>3071</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uttar</th>\n",
+       "      <td>172</td>\n",
+       "      <td>1793</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delhi</th>\n",
+       "      <td>111</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Madhya</th>\n",
+       "      <td>99</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tamil</th>\n",
+       "      <td>66</td>\n",
+       "      <td>1821</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andhra</th>\n",
+       "      <td>61</td>\n",
+       "      <td>1016</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West B</th>\n",
+       "      <td>57</td>\n",
+       "      <td>571</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rajast</th>\n",
+       "      <td>49</td>\n",
+       "      <td>2083</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jammu</th>\n",
+       "      <td>40</td>\n",
+       "      <td>494</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bihar</th>\n",
+       "      <td>28</td>\n",
+       "      <td>251</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Karnat</th>\n",
+       "      <td>26</td>\n",
+       "      <td>500</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Haryan</th>\n",
+       "      <td>12</td>\n",
+       "      <td>287</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Punjab</th>\n",
+       "      <td>10</td>\n",
+       "      <td>308</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jharkh</th>\n",
+       "      <td>8</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Telang</th>\n",
+       "      <td>7</td>\n",
+       "      <td>990</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kerala</th>\n",
+       "      <td>7</td>\n",
+       "      <td>458</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Odisha</th>\n",
+       "      <td>6</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andama</th>\n",
+       "      <td>4</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ladakh</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chhatt</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chandi</th>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Puduch</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         New  Total  Deaths\n",
+       "state                      \n",
+       "Total   1835  26283     825\n",
+       "Mahara   811   7628     323\n",
+       "Gujara   256   3071     133\n",
+       "Uttar    172   1793      27\n",
+       "Delhi    111   2625      54\n",
+       "Madhya    99   1945      99\n",
+       "Tamil     66   1821      23\n",
+       "Andhra    61   1016      31\n",
+       "West B    57    571      18\n",
+       "Rajast    49   2083      34\n",
+       "Jammu     40    494       6\n",
+       "Bihar     28    251       2\n",
+       "Karnat    26    500      18\n",
+       "Haryan    12    287       3\n",
+       "Punjab    10    308      17\n",
+       "Jharkh     8     67       3\n",
+       "Telang     7    990      25\n",
+       "Kerala     7    458       4\n",
+       "Odisha     6    100       1\n",
+       "Andama     4     33       0\n",
+       "Ladakh     2     20       0\n",
+       "Chhatt     1     37       0\n",
+       "Chandi     1     28       0\n",
+       "Puduch     1      8       0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_data():\n",
+    "    url = 'https://api.covid19india.org/data.json'\n",
+    "    page = requests.get(url)\n",
+    "    df = pd.DataFrame(json.loads(page.content)['statewise'])\n",
+    "    df.state = df.state.apply(lambda x: x[:6])\n",
+    "    df = df.set_index('state').iloc[:,:6]\n",
+    "    df = df[df.deltaconfirmed != '0'].rename({'active': 'Active', 'confirmed': 'Total', 'deaths': 'Deaths', 'deltaconfirmed': 'New'}, axis=1)\n",
+    "    return df.astype(int).sort_values(['New', 'Total'], ascending=False)[['New', 'Total', 'Deaths']]\n",
+    "\n",
+    "    \n",
+    "get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [],
@@ -2541,7 +2775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2633,7 +2867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2642,7 +2876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2651,18 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[['Country', 'New', 'Total', 'Deaths']]\n",
-    "df.Country = df.Country.apply(lambda x: x[:8])\n",
-    "df = df.rename({'Country': 'Count','Total':'Conf'}, axis=1).set_index('Count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,11 +2916,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bot.send_message(get_clean_table(get_time_series()))"
+    "bot.send_message(get_clean_table(get_total_time_series()))"
    ]
   },
   {
